# quadro3

./: .gitignore  .gitmodules  .gitpod.yml  CMakeLists.txt  README.md  sdkconfig  sdkconfig.defaults  start.bat
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/actions/idf-with-qemu/: Dockerfile  action.yml
.github/workflows/: Dockerfile  ci.yml  codeql-analysis.yml  docker-image.yml
components/adder/: CMakeLists.txt  adder.c  adder.h
components/adder/test/: CMakeLists.txt  test_adder.c
components/bno/: CMakeLists.txt  bno.c  bno.h
components/bno/test/: CMakeLists.txt  testBno.c
components/config/: CMakeLists.txt  config.c  config.h
components/config/test/: CMakeLists.txt  testConfig.c
components/eekf/: CMakeLists.txt
components/flow/: CMakeLists.txt  flow.c  flow.h
components/i2c/: CMakeLists.txt  i2c.c  i2c.h
components/i2c/test/: CMakeLists.txt  testI2c.c
components/mpack/: CMakeLists.txt
components/remote/: CMakeLists.txt  remote.c  remote.h  secrets.h
components/remote/www/: home.js  index.html  manifest.json  script.js  style.css
components/sensors/: CMakeLists.txt  sensors.c  sensors.h
components/sensors/test/: CMakeLists.txt  testSensors.c
components/sh2/: CMakeLists.txt  sh2_hal_impl.h
main/: main.c
test/: CMakeLists.txt  qemu_check.sh  sdkconfig
test/main/: CMakeLists.txt  quadro2_test.c  quadro3_test.c
