idf_component_register(SRCS "./mpack/src/mpack/mpack-common.c"
                            "./mpack/src/mpack/mpack-expect.c"
                            "./mpack/src/mpack/mpack-node.c"
                            "./mpack/src/mpack/mpack-platform.c"
                            "./mpack/src/mpack/mpack-reader.c"
                            "./mpack/src/mpack/mpack-writer.c"
                       INCLUDE_DIRS "./mpack/src/mpack"
                       REQUIRES ""
                       PRIV_REQUIRES "")